docs: sender README 작성